// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelatedProducts component renders correctly with no related products 1`] = `<div />`;

exports[`RelatedProducts component renders correctly with related products 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="related-products-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
          data-testid="typography"
        >
          MC: pdp.relatedProducts.title
        </h2>
        <div>
          <div
            class="Tabs-secondary css-iid5p5"
            data-testid="tabs"
          >
            <div>
              <div
                class="Tabs-tabsBar"
              >
                <div
                  class=" css-ze8cyt"
                >
                  <div
                    class="MuiContainer-root MuiContainer-maxWidthXl css-1ozv57h-MuiContainer-root"
                  >
                    <div
                      class="MuiTabs-root css-1e0aii6-MuiTabs-root"
                    >
                      <div
                        class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                          data-testid="KeyboardArrowLeftIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </div>
                      <div
                        class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-oqr85h"
                        style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                      />
                      <div
                        class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
                        style="margin-bottom: 0px;"
                      >
                        <div
                          aria-label="tabs"
                          class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                          role="tablist"
                        >
                          <button
                            aria-controls="tabpanel-group"
                            aria-selected="true"
                            class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected Tabs-tabRoot css-7sdbr4-MuiButtonBase-root-MuiTab-root"
                            data-gtm="{"id":"related-products-filter1","label":"group","action":"Filter – Related Products"}"
                            data-testid="tab-group"
                            id="tab-group"
                            role="tab"
                            tabindex="0"
                            type="button"
                          >
                            group
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <span
                          class="MuiTabs-indicator Tabs-tabIndicator css-tv859c-MuiTabs-indicator"
                          style="left: 0px; width: 0px;"
                        />
                      </div>
                      <div
                        class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                          data-testid="KeyboardArrowRightIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-16sd96l-MuiDivider-root"
              />
            </div>
            <div
              aria-labelledby="tab-group"
              class="Tabs-tabPanel Tabs-tabPanelBox MuiBox-root css-923awc"
              data-testid="tabpanel-group"
              heading="group"
              id="tabpanel-group"
              role="tabpanel"
            >
              <div
                class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
                data-testid="grid-container"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
                  data-testid="grid-item"
                >
                  <div
                    class="TappableCard-root ColorPair-white css-1bloavi"
                    data-testid="tappable-card-box"
                  >
                    <a
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
                      data-gtm="{"id":"cta-click1","label":"name - Shadow Black, Gloss, 6x7x8symbol - MC: pdp.relatedProducts.viewDetails","action":"/en/path/"}"
                      data-testid="tappable-card-main"
                      href="/en/path"
                      tabindex="0"
                    >
                      <img
                        alt="Shadow Black, Gloss, 6x7x8symbol name"
                        class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
                        data-testid="tappable-card-media"
                        draggable="false"
                        src="http://localhost:8000"
                      />
                      <div
                        class="TappableCard-body css-c6k36h"
                      >
                        <div
                          class="TappableCard-brandLogo TappableCard-negative css-p11bhc"
                          data-testid="tappable-card-body-brand-logo"
                        />
                        <h5
                          class="MuiTypography-root MuiTypography-h5 TappableCard-title css-87i4k3-MuiTypography-root"
                          data-testid="tappable-card-body-title"
                        >
                          name
                        </h5>
                        <h6
                          class="MuiTypography-root MuiTypography-h6 TappableCard-text TappableCard-subtitle css-1nuwz6u-MuiTypography-root"
                          data-testid="tappable-card-body-subtitle"
                        >
                          Shadow Black, Gloss, 6x7x8symbol
                        </h6>
                        <div
                          class="TappableCard-text"
                          data-testid="tappable-card-body-description"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
                            data-testid="typography"
                          >
                            MC: pdp.nobb.label
                            : 
                            <b>
                              external-product-code
                            </b>
                          </p>
                        </div>
                      </div>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                    <div
                      class="TappableCard-footer css-1rg9dq1"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1c5pucp-MuiTypography-root-MuiLink-root"
                        data-gtm="{"id":"cta-click1","label":"name - Shadow Black, Gloss, 6x7x8symbol - MC: pdp.relatedProducts.viewDetails","action":"/en/path/"}"
                        data-testid="anchor-link"
                        href="/en/path"
                      >
                        MC: pdp.relatedProducts.viewDetails
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1vtibze-MuiSvgIcon-root"
                          data-testid="internal"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                          />
                        </svg>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedProducts component renders correctly with related products without groups 1`] = `<div />`;

exports[`RelatedProducts component renders correctly without Brand and External Product code on related products 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="related-products-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
          data-testid="typography"
        >
          MC: pdp.relatedProducts.title
        </h2>
        <div>
          <div
            class="Tabs-secondary css-iid5p5"
            data-testid="tabs"
          >
            <div>
              <div
                class="Tabs-tabsBar"
              >
                <div
                  class=" css-ze8cyt"
                >
                  <div
                    class="MuiContainer-root MuiContainer-maxWidthXl css-1ozv57h-MuiContainer-root"
                  >
                    <div
                      class="MuiTabs-root css-1e0aii6-MuiTabs-root"
                    >
                      <div
                        class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                          data-testid="KeyboardArrowLeftIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </div>
                      <div
                        class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-oqr85h"
                        style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                      />
                      <div
                        class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
                        style="margin-bottom: 0px;"
                      >
                        <div
                          aria-label="tabs"
                          class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                          role="tablist"
                        >
                          <button
                            aria-controls="tabpanel-group"
                            aria-selected="true"
                            class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected Tabs-tabRoot css-7sdbr4-MuiButtonBase-root-MuiTab-root"
                            data-gtm="{"id":"related-products-filter1","label":"group","action":"Filter – Related Products"}"
                            data-testid="tab-group"
                            id="tab-group"
                            role="tab"
                            tabindex="0"
                            type="button"
                          >
                            group
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <span
                          class="MuiTabs-indicator Tabs-tabIndicator css-tv859c-MuiTabs-indicator"
                          style="left: 0px; width: 0px;"
                        />
                      </div>
                      <div
                        class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                          data-testid="KeyboardArrowRightIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-16sd96l-MuiDivider-root"
              />
            </div>
            <div
              aria-labelledby="tab-group"
              class="Tabs-tabPanel Tabs-tabPanelBox MuiBox-root css-923awc"
              data-testid="tabpanel-group"
              heading="group"
              id="tabpanel-group"
              role="tabpanel"
            >
              <div
                class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
                data-testid="grid-container"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
                  data-testid="grid-item"
                >
                  <div
                    class="TappableCard-root ColorPair-white css-1bloavi"
                    data-testid="tappable-card-box"
                  >
                    <a
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
                      data-gtm="{"id":"cta-click1","label":"name - Shadow Black, Gloss, 6x7x8symbol - MC: pdp.relatedProducts.viewDetails","action":"/en/path/"}"
                      data-testid="tappable-card-main"
                      href="/en/path"
                      tabindex="0"
                    >
                      <img
                        alt="Shadow Black, Gloss, 6x7x8symbol name"
                        class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
                        data-testid="tappable-card-media"
                        draggable="false"
                        src="http://localhost:8000"
                      />
                      <div
                        class="TappableCard-body css-c6k36h"
                      >
                        <h5
                          class="MuiTypography-root MuiTypography-h5 TappableCard-title TappableCard-noBrandLogo css-87i4k3-MuiTypography-root"
                          data-testid="tappable-card-body-title"
                        >
                          name
                        </h5>
                        <h6
                          class="MuiTypography-root MuiTypography-h6 TappableCard-text TappableCard-subtitle css-1nuwz6u-MuiTypography-root"
                          data-testid="tappable-card-body-subtitle"
                        >
                          Shadow Black, Gloss, 6x7x8symbol
                        </h6>
                        <div
                          class="TappableCard-text"
                          data-testid="tappable-card-body-description"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
                            data-testid="typography"
                          >
                            MC: pdp.nobb.label
                            : 
                            <b>
                              external-product-code
                            </b>
                          </p>
                        </div>
                      </div>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                    <div
                      class="TappableCard-footer css-1rg9dq1"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1c5pucp-MuiTypography-root-MuiLink-root"
                        data-gtm="{"id":"cta-click1","label":"name - Shadow Black, Gloss, 6x7x8symbol - MC: pdp.relatedProducts.viewDetails","action":"/en/path/"}"
                        data-testid="anchor-link"
                        href="/en/path"
                      >
                        MC: pdp.relatedProducts.viewDetails
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1vtibze-MuiSvgIcon-root"
                          data-testid="internal"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                          />
                        </svg>
                      </a>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
                  data-testid="grid-item"
                >
                  <div
                    class="TappableCard-root ColorPair-white css-1bloavi"
                    data-testid="tappable-card-box"
                  >
                    <a
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
                      data-gtm="{"id":"cta-click1","label":"name - Shadow Black, Gloss, 6x7x8symbol - MC: pdp.relatedProducts.viewDetails","action":"/en/path/"}"
                      data-testid="tappable-card-main"
                      href="/en/path"
                      tabindex="0"
                    >
                      <img
                        alt="Shadow Black, Gloss, 6x7x8symbol name"
                        class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
                        data-testid="tappable-card-media"
                        draggable="false"
                        src="http://localhost:8000"
                      />
                      <div
                        class="TappableCard-body css-c6k36h"
                      >
                        <div
                          class="TappableCard-brandLogo TappableCard-negative css-p11bhc"
                          data-testid="tappable-card-body-brand-logo"
                        />
                        <h5
                          class="MuiTypography-root MuiTypography-h5 TappableCard-title css-87i4k3-MuiTypography-root"
                          data-testid="tappable-card-body-title"
                        >
                          name
                        </h5>
                        <h6
                          class="MuiTypography-root MuiTypography-h6 TappableCard-text TappableCard-subtitle css-1nuwz6u-MuiTypography-root"
                          data-testid="tappable-card-body-subtitle"
                        >
                          Shadow Black, Gloss, 6x7x8symbol
                        </h6>
                      </div>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                    <div
                      class="TappableCard-footer css-1rg9dq1"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1c5pucp-MuiTypography-root-MuiLink-root"
                        data-gtm="{"id":"cta-click1","label":"name - Shadow Black, Gloss, 6x7x8symbol - MC: pdp.relatedProducts.viewDetails","action":"/en/path/"}"
                        data-testid="anchor-link"
                        href="/en/path"
                      >
                        MC: pdp.relatedProducts.viewDetails
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1vtibze-MuiSvgIcon-root"
                          data-testid="internal"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                          />
                        </svg>
                      </a>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
                  data-testid="grid-item"
                >
                  <div
                    class="TappableCard-root ColorPair-white css-1bloavi"
                    data-testid="tappable-card-box"
                  >
                    <a
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
                      data-gtm="{"id":"cta-click1","label":"name - Shadow Black, Gloss, 6x7x8symbol - MC: pdp.relatedProducts.viewDetails","action":"/en/path/"}"
                      data-testid="tappable-card-main"
                      href="/en/path"
                      tabindex="0"
                    >
                      <img
                        alt="Shadow Black, Gloss, 6x7x8symbol name"
                        class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
                        data-testid="tappable-card-media"
                        draggable="false"
                        src="http://localhost:8000"
                      />
                      <div
                        class="TappableCard-body css-c6k36h"
                      >
                        <h5
                          class="MuiTypography-root MuiTypography-h5 TappableCard-title TappableCard-noBrandLogo css-87i4k3-MuiTypography-root"
                          data-testid="tappable-card-body-title"
                        >
                          name
                        </h5>
                        <h6
                          class="MuiTypography-root MuiTypography-h6 TappableCard-text TappableCard-subtitle css-1nuwz6u-MuiTypography-root"
                          data-testid="tappable-card-body-subtitle"
                        >
                          Shadow Black, Gloss, 6x7x8symbol
                        </h6>
                      </div>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                    <div
                      class="TappableCard-footer css-1rg9dq1"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1c5pucp-MuiTypography-root-MuiLink-root"
                        data-gtm="{"id":"cta-click1","label":"name - Shadow Black, Gloss, 6x7x8symbol - MC: pdp.relatedProducts.viewDetails","action":"/en/path/"}"
                        data-testid="anchor-link"
                        href="/en/path"
                      >
                        MC: pdp.relatedProducts.viewDetails
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1vtibze-MuiSvgIcon-root"
                          data-testid="internal"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                          />
                        </svg>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedProducts component renders with correct gtmLabel 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="related-products-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
          data-testid="typography"
        >
          MC: pdp.relatedProducts.title
        </h2>
        <div>
          <div
            class="Tabs-secondary css-iid5p5"
            data-testid="tabs"
          >
            <div>
              <div
                class="Tabs-tabsBar"
              >
                <div
                  class=" css-ze8cyt"
                >
                  <div
                    class="MuiContainer-root MuiContainer-maxWidthXl css-1ozv57h-MuiContainer-root"
                  >
                    <div
                      class="MuiTabs-root css-1e0aii6-MuiTabs-root"
                    >
                      <div
                        class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                          data-testid="KeyboardArrowLeftIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </div>
                      <div
                        class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-oqr85h"
                        style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                      />
                      <div
                        class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
                        style="margin-bottom: 0px;"
                      >
                        <div
                          aria-label="tabs"
                          class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                          role="tablist"
                        >
                          <button
                            aria-controls="tabpanel-group"
                            aria-selected="true"
                            class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected Tabs-tabRoot css-7sdbr4-MuiButtonBase-root-MuiTab-root"
                            data-gtm="{"id":"related-products-filter1","label":"group","action":"Filter – Related Products"}"
                            data-testid="tab-group"
                            id="tab-group"
                            role="tab"
                            tabindex="0"
                            type="button"
                          >
                            group
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <span
                          class="MuiTabs-indicator Tabs-tabIndicator css-tv859c-MuiTabs-indicator"
                          style="left: 0px; width: 0px;"
                        />
                      </div>
                      <div
                        class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                          data-testid="KeyboardArrowRightIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-16sd96l-MuiDivider-root"
              />
            </div>
            <div
              aria-labelledby="tab-group"
              class="Tabs-tabPanel Tabs-tabPanelBox MuiBox-root css-923awc"
              data-testid="tabpanel-group"
              heading="group"
              id="tabpanel-group"
              role="tabpanel"
            >
              <div
                class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
                data-testid="grid-container"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
                  data-testid="grid-item"
                >
                  <div
                    class="TappableCard-root ColorPair-white css-1bloavi"
                    data-testid="tappable-card-box"
                  >
                    <a
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
                      data-gtm="{"id":"cta-click1","label":"name - Shadow Black, Gloss, 6x7x8symbol - MC: pdp.relatedProducts.viewDetails","action":"/en/path/"}"
                      data-testid="tappable-card-main"
                      href="/en/path"
                      tabindex="0"
                    >
                      <img
                        alt="Shadow Black, Gloss, 6x7x8symbol name"
                        class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
                        data-testid="tappable-card-media"
                        draggable="false"
                        src="http://localhost:8000"
                      />
                      <div
                        class="TappableCard-body css-c6k36h"
                      >
                        <div
                          class="TappableCard-brandLogo TappableCard-negative css-p11bhc"
                          data-testid="tappable-card-body-brand-logo"
                        />
                        <h5
                          class="MuiTypography-root MuiTypography-h5 TappableCard-title css-87i4k3-MuiTypography-root"
                          data-testid="tappable-card-body-title"
                        >
                          name
                        </h5>
                        <h6
                          class="MuiTypography-root MuiTypography-h6 TappableCard-text TappableCard-subtitle css-1nuwz6u-MuiTypography-root"
                          data-testid="tappable-card-body-subtitle"
                        >
                          Shadow Black, Gloss, 6x7x8symbol
                        </h6>
                        <div
                          class="TappableCard-text"
                          data-testid="tappable-card-body-description"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
                            data-testid="typography"
                          >
                            MC: pdp.nobb.label
                            : 
                            <b>
                              external-product-code
                            </b>
                          </p>
                        </div>
                      </div>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                    <div
                      class="TappableCard-footer css-1rg9dq1"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1c5pucp-MuiTypography-root-MuiLink-root"
                        data-gtm="{"id":"cta-click1","label":"name - Shadow Black, Gloss, 6x7x8symbol - MC: pdp.relatedProducts.viewDetails","action":"/en/path/"}"
                        data-testid="anchor-link"
                        href="/en/path"
                      >
                        MC: pdp.relatedProducts.viewDetails
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1vtibze-MuiSvgIcon-root"
                          data-testid="internal"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                          />
                        </svg>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
